k8s/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learn
spec:
  template:
    spec:
      containers:
        - name: learn
          resources:
            limits:
              cpu: 20m
              memory: 70Mi
            requests:
              cpu: 20m
              memory: 70Mi
