k8s/overlays/dev/ingress-patch.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: learn
spec:
  rules:
    - host: app.dxas90.xyz
      http:
        paths:
          - path: /develop
